deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ffw-funk
  namespace: ffw-funk
spec:
  selector:
    app: ffw-funk
  ports:
    - name: http
      port: 80
      targetPort: 8080
