deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ffw-funk
  namespace: ffw-funk
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ffw-funk.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ffw-funk
                port:
                  number: 80
